Bug 566414 - Signed/unsigned comparison warnings in editor; r=ehsan